--- a/templates/aboutusnew.html
+++ b/templates/aboutusnew.html
@@ -65,7 +65,7 @@
                             class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"; style="text-align:center">Developer</h5>
-                            <p class="card-text"; style="text-align:justify">Kartikey Sharma, Student, Department of Computer Engineering, PIET</p>
+                            <p class="card-text"; style="text-align:justify">Nivesh soni, Student, Department of Computer Engineering, PIET</p>
             
                             
                         </div>
@@ -78,7 +78,7 @@
     <br><br><br><br><br><br>
     
     
-     <P style="font-size:20px;text-align:justify">Mr. Kartikey Sharma  is Student in Department of Computer Engineering, Poornima Institute of Engineering & technology, Jaipur. He is currently enrolled in B.Tech. program of Poornima Institue of Engineering and Technology. He is in 4th year of B.Tech. Computer Science & Engineering. His research interests are in the area of Image Processing, Machine Learning, Deep Learning and data Mining. He is Microsoft certified Azure AI Fundamental and Data Fundamental professional.</P>
+     <P style="font-size:20px;text-align:justify">Mr. Nivesh soni  is Student in Department of Computer Engineering, Poornima Institute of Engineering & technology, Jaipur. He is currently enrolled in B.Tech. program of Poornima Institue of Engineering and Technology. He is in 4th year of B.Tech. Computer Science & Engineering. His research interests are in the area of Image Processing, Machine Learning, Deep Learning and data Mining. He is Microsoft certified Azure AI Fundamental and Data Fundamental professional.</P>
     
    <br>
    <br>
